log
Fri, May 16, 2025  9:39:46 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  9:42:34 PM: 
 tests:  0|5
total_score: 0/70
c39f1b2
